# tambourine-voice

./: .hadolint.yaml  CONTRIBUTING.md
.github/workflows/: ci.yml
app/: package.json  pnpm-lock.yaml
app/src-tauri/: Cargo.toml
server/: Dockerfile  main.py  pyproject.toml
server/processors/: client_manager.py  configuration.py
server/services/: speechmatics_stt.py
turn-server/: test-local.sh
