[project]
name = "tambourine-voice"
version = "0.1.0"
description = "Your personal voice interface for any app"
authors = [{ name = "kstonekuan" }]
license = "AGPL-3.0-only"
readme = "../README.md"
requires-python = "~=3.13.0"
dependencies = [
    "pipecat-ai[anthropic,speechmatics,assemblyai,aws,azure,cartesia,cerebras,deepgram,google,groq,openai,openrouter,silero,webrtc]>=1.0.0",
    "pipecat-ai[whisper]>=1.0.0; sys_platform != 'darwin'",
    "pipecat-ai[mlx-whisper]>=1.0.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "pydantic-settings>=2.13.1",
    "loguru>=0.7.3",
    "typer>=0.24.1",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "pydantic>=2.13.0",
    "slowapi>=0.1.9",
]

[project.scripts]
tambourine-voice-server = "main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",    #
    "ruff>=0.15.10",
    "ty>=0.0.30",
    "yamllint>=1.38.0",
]

[build-system]
requires = [
    "uv_build>=0.11.6", #
]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = ["api", "config", "services", "utils", "processors"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (includes unused imports/variables F401, F841)
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "RET504", # unnecessary return
    "ANN401", # dynamically typed expressions (Any) - needed for **kwargs passthrough
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
division-by-zero = "error"
deprecated = "error"
unused-ignore-comment = "error"
possibly-unresolved-reference = "error"
